--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@types/node": "^20.3.3",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "antd": "^5.6.4",
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-scripts": "5.0.1",
     "typescript": "^5.1.6",
     "web-vitals": "^3.3.2"
